[gd_scene load_steps=7 format=4 uid="uid://dq6ypyb8epxqn"]

[ext_resource type="Script" uid="uid://xeegrbni2o6r" path="res://game.gd" id="1_feb5d"]
[ext_resource type="Texture2D" uid="uid://ce18klbbdd1cq" path="res://assets/tiles/field_tilesheet.png" id="2_fc0e3"]
[ext_resource type="PackedScene" uid="uid://ddaeqxn4bccn8" path="res://player.tscn" id="3_7jktm"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mgpfe"]
texture = ExtResource("2_fc0e3")
texture_region_size = Vector2i(128, 128)
1:1/0 = 0
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)

[sub_resource type="TileSet" id="TileSet_pl1wv"]
tile_size = Vector2i(128, 128)
physics_layer_0/collision_layer = 4
physics_layer_0/collision_mask = 3
sources/0 = SubResource("TileSetAtlasSource_mgpfe")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_feb5d"]
bg_color = Color(0.314656, 0.608943, 0.955922, 1)

[node name="Game" type="Node2D"]
script = ExtResource("1_feb5d")

[node name="Ground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAABAAEAAAAAAAEAAAABAAEAAAAAAAIAAAABAAEAAAAAAAMAAAABAAEAAAAAAAQAAAABAAEAAAAAAAUAAAABAAEAAAAAAAYAAAABAAEAAAAAAAcAAAABAAEAAAABAAAAAAABAAEAAAABAAEAAAABAAEAAAABAAIAAAABAAEAAAABAAMAAAABAAEAAAABAAQAAAABAAEAAAABAAUAAAABAAEAAAABAAYAAAABAAEAAAABAAcAAAABAAEAAAACAAAAAAABAAEAAAACAAEAAAABAAEAAAACAAIAAAABAAEAAAACAAMAAAABAAEAAAACAAQAAAABAAEAAAACAAUAAAABAAEAAAACAAYAAAABAAEAAAACAAcAAAABAAEAAAADAAAAAAABAAEAAAADAAEAAAABAAEAAAADAAIAAAABAAEAAAADAAMAAAABAAEAAAADAAQAAAABAAEAAAADAAUAAAABAAEAAAADAAYAAAABAAEAAAADAAcAAAABAAEAAAAEAAAAAAABAAEAAAAEAAEAAAABAAEAAAAEAAIAAAABAAEAAAAEAAMAAAABAAEAAAAEAAQAAAABAAEAAAAEAAUAAAABAAEAAAAEAAYAAAABAAEAAAAEAAcAAAABAAEAAAAFAAAAAAABAAEAAAAFAAEAAAABAAEAAAAFAAIAAAABAAEAAAAFAAQAAAABAAEAAAAFAAUAAAABAAEAAAAFAAYAAAABAAEAAAAFAAcAAAABAAEAAAAGAAAAAAABAAEAAAAGAAEAAAABAAEAAAAGAAIAAAABAAEAAAAGAAQAAAABAAEAAAAGAAUAAAABAAEAAAAGAAYAAAABAAEAAAAGAAcAAAABAAEAAAAHAAAAAAABAAEAAAAHAAEAAAABAAEAAAAHAAIAAAABAAEAAAAHAAMAAAABAAEAAAAHAAQAAAABAAEAAAAHAAUAAAABAAEAAAAHAAYAAAABAAEAAAAHAAcAAAABAAEAAAAIAAAAAAABAAEAAAAIAAEAAAABAAEAAAAIAAIAAAABAAEAAAAIAAMAAAABAAEAAAAIAAQAAAABAAEAAAAIAAUAAAABAAEAAAAIAAYAAAABAAEAAAAIAAcAAAABAAEAAAAJAAAAAAABAAEAAAAJAAEAAAABAAEAAAAJAAIAAAABAAEAAAAJAAMAAAABAAEAAAAJAAQAAAABAAEAAAAJAAUAAAABAAEAAAAJAAYAAAABAAEAAAAJAAcAAAABAAEAAAAKAAAAAAABAAEAAAAKAAEAAAABAAEAAAAKAAIAAAABAAEAAAAKAAMAAAABAAEAAAAKAAQAAAABAAEAAAAKAAUAAAABAAEAAAAKAAYAAAABAAEAAAAKAAcAAAABAAEAAAALAAAAAAABAAEAAAALAAEAAAABAAEAAAALAAIAAAABAAEAAAALAAMAAAABAAEAAAALAAQAAAABAAEAAAALAAUAAAABAAEAAAALAAYAAAABAAEAAAALAAcAAAABAAEAAAAMAAAAAAABAAEAAAAMAAEAAAABAAEAAAAMAAIAAAABAAEAAAAMAAMAAAABAAEAAAAMAAQAAAABAAEAAAAMAAUAAAABAAEAAAAMAAYAAAABAAEAAAAMAAcAAAABAAEAAAANAAAAAAABAAEAAAANAAEAAAABAAEAAAANAAIAAAABAAEAAAANAAMAAAABAAEAAAANAAQAAAABAAEAAAANAAUAAAABAAEAAAANAAYAAAABAAEAAAANAAcAAAABAAEAAAAOAAAAAAABAAEAAAAOAAEAAAABAAEAAAAOAAIAAAABAAEAAAAOAAMAAAABAAEAAAAOAAQAAAABAAEAAAAOAAUAAAABAAEAAAAOAAYAAAABAAEAAAAOAAcAAAABAAEAAAAGAAMAAAABAAEAAAAFAAMAAAABAAEAAAA=")
tile_set = SubResource("TileSet_pl1wv")

[node name="Tree" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAEAAAAFAAUAAAAAAAIAAAAGAAEAAAAAAAYAAAAFAAEAAAABAAQAAAAFAAUAAAABAAUAAAAGAAEAAAACAAEAAAAGAAEAAAACAAIAAAAGAAEAAAACAAMAAAAFAAEAAAACAAYAAAAFAAEAAAADAAQAAAAGAAEAAAADAAcAAAAGAAUAAAAEAAMAAAAGAAUAAAAEAAUAAAAGAAUAAAAEAAcAAAAFAAUAAAAFAAEAAAAFAAYAAAAFAAQAAAAFAAEAAAAFAAUAAAAGAAUAAAAFAAcAAAAFAAEAAAAGAAAAAAAGAAEAAAAGAAEAAAAFAAUAAAAGAAQAAAAFAAEAAAAGAAYAAAAFAAEAAAAGAAcAAAAFAAUAAAAHAAQAAAAFAAEAAAAHAAYAAAAGAAEAAAAIAAEAAAAFAAEAAAAIAAIAAAAFAAEAAAAIAAMAAAAGAAUAAAAIAAcAAAAGAAUAAAAJAAMAAAAFAAEAAAAJAAYAAAAFAAYAAAAKAAAAAAAFAAUAAAAKAAIAAAAGAAEAAAAKAAUAAAAFAAUAAAAKAAcAAAAFAAEAAAALAAAAAAAFAAYAAAALAAIAAAAFAAYAAAALAAMAAAAGAAEAAAALAAQAAAAFAAUAAAALAAUAAAAFAAUAAAALAAcAAAAFAAUAAAAMAAIAAAAFAAEAAAAMAAQAAAAGAAUAAAAMAAUAAAAGAAUAAAANAAAAAAAFAAEAAAANAAUAAAAFAAEAAAAOAAQAAAAGAAUAAAAOAAUAAAAGAAEAAAAOAAcAAAAFAAEAAAA=")
tile_set = SubResource("TileSet_pl1wv")

[node name="Player" parent="." instance=ExtResource("3_7jktm")]
position = Vector2(696, 440)

[node name="CollectBar" type="ProgressBar" parent="Player"]
offset_left = -32.0
offset_top = 32.0
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/fill = SubResource("StyleBoxFlat_feb5d")
max_value = 10.0
show_percentage = false

[node name="Control" type="Control" parent="Player"]
layout_mode = 3
anchors_preset = 0
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0

[node name="Label" type="Label" parent="Player/Control"]
layout_mode = 1
offset_left = 24.0
offset_top = 16.0
offset_right = 185.0
offset_bottom = 61.0
theme_override_font_sizes/font_size = 32
text = "Wood: 123"

[node name="CollectTimer" type="Timer" parent="."]

[node name="TileHighlight" type="ColorRect" parent="."]
offset_left = -360.0
offset_top = -200.0
offset_right = -232.0
offset_bottom = -72.0
color = Color(1, 0.392157, 0.392157, 0.498039)

[node name="CollectIndicator" type="Label" parent="."]
offset_left = -88.0
offset_top = -296.0
offset_right = -45.0
offset_bottom = -253.0
scale = Vector2(3, 3)
text = "ðŸª“"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="CollectTimer" to="." method="_on_collect_timer_timeout"]
